# smart-waste-openenv

./: Dockerfile  README.md  app.py  dataset.json  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
