[project]
name = "smart-waste-openenv"
version = "0.1.0"
description = "OpenEnv environment for municipal waste complaint routing"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Anu A"},
    {name = "Karthikeyan R"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]
